Display a route ladder for each selected route (#17)

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,1 +1,6 @@
-/* This file is for your main application css. */
+@import "route_ladder";
+@import "route_ladders";
+
+.m-app {
+  display: flex;
+}
