--- a/assets/css/_route_ladder.scss
+++ b/assets/css/_route_ladder.scss
@@ -17,11 +17,24 @@
 .m-route-ladder__close {
   background: none;
   border: none;
+  color: $dark;
   cursor: pointer;
   font-size: 1rem;
+  padding: 0;
   position: absolute;
-  right: 0.4rem;
-  top: 0.53rem;
+  right: 0.5rem;
+  top: 0.5rem;
+}
+
+.m-route-ladder__close-icon {
+  display: inline-block;
+  height: 0.625rem;
+  width: 0.625rem;
+
+  svg {
+    stroke: $dark;
+    fill: $dark;
+  }
 }
 
 .m-route-ladder__timepoints {
