Style the route ladders section (#21)

--- a/assets/css/_route_ladder.scss
+++ b/assets/css/_route_ladder.scss
@@ -1,25 +1,40 @@
 .m-route-ladder {
-  margin: 0 2rem;
-  width: 10rem;
+  margin: 0 0.5rem;
+  width: 12em;
 }
 
 .m-route-ladder__header {
-  background-color: whitesmoke;
-  border: 1px solid dimgray;
-  display: flex;
-  margin-bottom: 1rem;
-  padding: 0.2rem 0.5rem;
+  background-color: $sunflower;
+  border-radius: 4px;
+  font-size: 1.25rem;
+  font-weight: bolder;
+  margin-bottom: 2rem;
+  padding: 0.4rem 0;
+  position: relative;
   text-align: center;
-}
-
-.m-route-ladder__route-name {
-  flex-grow: 1;
 }
 
 .m-route-ladder__close {
   background: none;
   border: none;
+  color: $dark;
   cursor: pointer;
+  font-size: 1rem;
+  padding: 0;
+  position: absolute;
+  right: 0.5rem;
+  top: 0.5rem;
+}
+
+.m-route-ladder__close-icon {
+  display: inline-block;
+  height: 0.625rem;
+  width: 0.625rem;
+
+  svg {
+    stroke: $dark;
+    fill: $dark;
+  }
 }
 
 .m-route-ladder__timepoints {
@@ -28,24 +43,45 @@
 }
 
 .m-route-ladder__timepoint {
-  align-items: center;
   display: flex;
   justify-content: center;
+  margin-top: -4px;
+
+  &:first-of-type {
+    margin-top: 0;
+  }
+
+  &:last-of-type {
+    svg line {
+      display: none;
+    }
+  }
 }
 
 .m-route-ladder__stop {
   line-height: 0;
 
   svg {
-    fill: none;
-    stroke: dimgray;
-    stroke-width: 1;
+    circle {
+      fill: $white;
+      stroke: $light-periwinkle;
+      stroke-width: 1;
+    }
+
+    line {
+      fill: none;
+      stroke: $light-periwinkle;
+      stroke-width: 7;
+    }
   }
 }
 
 .m-route-ladder__timepoint-name {
-  margin: 0 1rem;
+  color: $blue-grey;
+  font-size: 0.75rem;
+  font-weight: bold;
+  min-width: 3.3rem;
   text-align: center;
   text-transform: uppercase;
-  min-width: 5rem;
+  transform: translateY(-0.3rem);
 }
