Add a route ID filter

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -5,6 +5,7 @@
 @import "route_ladder";
 @import "route_ladders";
 @import "route_picker";
+@import "route_filter";
 
 body {
   background-color: $pale-grey;
