--- a/assets/css/_route_ladders.scss
+++ b/assets/css/_route_ladders.scss
@@ -1,4 +1,9 @@
 .m-route-ladders {
   display: flex;
-  padding: 1rem 1rem 1rem 12.5rem;
+  padding: 1rem 1rem 1rem 3rem;
+  transition: padding-left 0.2s ease-in-out;
+
+  .m-route-picker.visible + & {
+    padding-left: 12.5rem;
+  }
 }
