--- a/assets/css/_colors.scss
+++ b/assets/css/_colors.scss
@@ -2,6 +2,7 @@ $white: #ffffff;
 $black: #000000;
 
 $pale-grey: #f2f3f5;
+$lighter-grey: #d9d9d9;
 $light-periwinkle: #d5d8e0;
 $blue-grey: #8b8d91;
 $steel: #788093;
