Add more properties to generic button

--- a/assets/css/_route_filter.scss
+++ b/assets/css/_route_filter.scss
@@ -44,9 +44,8 @@
 }
 
 .m-route-filter__clear {
-  background: none;
-  border: none;
   right: 0;
+  padding: 0 0.375rem;
   position: absolute;
   top: 0.6rem;
 }
