--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -15,7 +15,12 @@ body {
 }
 
 button {
+  background: none;
+  border: none;
+  color: inherit;
   cursor: pointer;
+  font: inherit;
+  padding: 0;
 }
 
 ol,
