--- a/assets/css/_route_picker.scss
+++ b/assets/css/_route_picker.scss
@@ -40,6 +40,10 @@
   font-size: 2rem;
   margin: 0;
   padding: 0 0.375rem;
+
+  &:focus {
+    outline: none;
+  }
 }
 
 .m-route-picker__selected-routes {
