--- a/assets/css/_route_picker.scss
+++ b/assets/css/_route_picker.scss
@@ -38,11 +38,23 @@
   color: $dark;
   font-family: $font-family;
   font-size: 2rem;
+  line-height: 1.5rem;
   margin: 0;
-  padding: 0 0.375rem;
+  padding: 0 0.375rem 0.5rem;
 
   &:focus {
     outline: none;
+  }
+}
+
+.m-route-picker__tab-button-icon {
+  display: inline-block;
+  height: 0.9rem;
+  width: 0.9rem;
+
+  svg {
+    stroke: $dark;
+    fill: $dark;
   }
 }
 
