Add a collapse/show button to route picker (#39)

--- a/assets/css/_route_filter.scss
+++ b/assets/css/_route_filter.scss
@@ -44,10 +44,8 @@
 }
 
 .m-route-filter__clear {
-  background: none;
-  border: none;
-  cursor: pointer;
   right: 0;
+  padding: 0 0.375rem;
   position: absolute;
   top: 0.6rem;
 }
