--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -14,6 +14,15 @@ body {
   margin: 0;
 }
 
+button {
+  background: none;
+  border: none;
+  color: inherit;
+  cursor: pointer;
+  font: inherit;
+  padding: 0;
+}
+
 ol,
 ul {
   list-style-type: none;
