--- a/assets/css/_route_picker.scss
+++ b/assets/css/_route_picker.scss
@@ -3,12 +3,59 @@
   display: flex;
   flex-direction: column;
   height: 100%;
+  // Required for pinning to the left side of the screen on the tablets
   left: inherit;
   padding: 1rem;
   position: fixed;
   top: inherit;
+  transition: left 0.2s ease-in-out;
   width: 7.5rem;
   z-index: 1;
+
+  &.visible {
+    left: 0;
+  }
+
+  &.hidden {
+    left: -9.5rem;
+  }
+}
+
+.m-route-picker__tab {
+  background-color: $light-periwinkle;
+  border-top-right-radius: 1rem;
+  border-bottom-right-radius: 1rem;
+  left: 9.5rem;
+  padding: 1.5rem 0.3rem;
+  position: absolute;
+  top: 1.625rem;
+  width: fit-content;
+}
+
+.m-route-picker__tab-button {
+  background-color: transparent;
+  border: none;
+  color: $dark;
+  font-family: $font-family;
+  font-size: 2rem;
+  line-height: 1.5rem;
+  margin: 0;
+  padding: 0 0.375rem 0.5rem;
+
+  &:focus {
+    outline: none;
+  }
+}
+
+.m-route-picker__tab-button-icon {
+  display: inline-block;
+  height: 0.9rem;
+  width: 0.9rem;
+
+  svg {
+    stroke: $dark;
+    fill: $dark;
+  }
 }
 
 .m-route-picker__selected-routes {
@@ -29,7 +76,6 @@
   border: none;
   border-radius: 4px;
   color: $dark;
-  cursor: pointer;
   font-family: $font-family;
   font-size: 0.8125rem;
   font-weight: bold;
