--- a/assets/css/_ladder.scss
+++ b/assets/css/_ladder.scss
@@ -27,15 +27,20 @@
 
 .m-ladder__vehicle-triangle {
   fill: $blue-grey;
-  stroke: none;
+  stroke: $pale-grey;
+  stroke-width: 2;
 
   &.selected {
     stroke: $dark;
-    stroke-width: 2;
   }
 }
 
-.m-ladder__vehicle-label {
+.m-ladder__vehicle-label-background {
+  fill: $pale-grey;
+  stroke: none;
+}
+
+.m-ladder__vehicle-label-text {
   color: $dark;
   font-size: 0.5625rem;
 }
