Convert VehicleIcon into a component that is scalable

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -8,6 +8,7 @@
 @import "route_ladders";
 @import "route_picker";
 @import "route_filter";
+@import "vehicle_icon";
 @import "vehicle_properties_panel";
 
 body {
