Use a lighter gray instead of transparentizing

--- a/assets/css/_colors.scss
+++ b/assets/css/_colors.scss
@@ -3,6 +3,7 @@ $black: #000000;
 
 $pale-grey: #f2f3f5;
 $lighter-grey: #d9d9d9;
+$lightest-grey: #f7f8f9;
 $light-periwinkle: #d5d8e0;
 $blue-grey: #8b8d91;
 $steel: #788093;
