--- a/assets/css/_route_ladder.scss
+++ b/assets/css/_route_ladder.scss
@@ -39,7 +39,7 @@
 
 .m-incoming-box {
   align-items: center;
-  background-color: transparentize($color: $white, $amount: 0.5);
+  background-color: $lightest-grey;
   color: $dark;
   display: flex;
   flex-direction: column;
