Add an incoming box and display incoming vehicles there (#59)

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -3,11 +3,13 @@
 @import "inter_ui";
 
 @import "close_button";
+@import "incoming_box";
 @import "ladder";
 @import "route_ladder";
 @import "route_ladders";
 @import "route_picker";
 @import "route_filter";
+@import "vehicle_icon";
 @import "vehicle_properties_panel";
 
 body {
