--- a/assets/css/_vehicle_icon.scss
+++ b/assets/css/_vehicle_icon.scss
@@ -1,9 +1,5 @@
 .m-vehicle-icon__triangle {
-  fill: $blue-grey;
-  stroke: $pale-grey;
+  fill: $color-vehicle-normal;
+  stroke: $color-bg-base;
   stroke-width: 2;
-
-  &.selected {
-    stroke: $dark;
-  }
 }
