--- a/assets/css/_route_picker.scss
+++ b/assets/css/_route_picker.scss
@@ -1,5 +1,5 @@
 .m-route-picker {
-  background-color: $light-periwinkle;
+  background-color: $color-bg-medium;
   display: flex;
   flex-direction: column;
   height: 100%;
@@ -22,7 +22,7 @@
 }
 
 .m-route-picker__tab {
-  background-color: $light-periwinkle;
+  background-color: $color-bg-medium;
   border-top-right-radius: 1rem;
   border-bottom-right-radius: 1rem;
   left: 9.5rem;
@@ -33,29 +33,11 @@
 }
 
 .m-route-picker__tab-button {
-  background-color: transparent;
-  border: none;
-  color: $dark;
-  font-family: $font-family;
+  @include button-icon(0.9rem);
   font-size: 2rem;
   line-height: 1.5rem;
   margin: 0;
   padding: 0 0.375rem 0.5rem;
-
-  &:focus {
-    outline: none;
-  }
-}
-
-.m-route-picker__tab-button-icon {
-  display: inline-block;
-  height: 0.9rem;
-  width: 0.9rem;
-
-  svg {
-    stroke: $dark;
-    fill: $dark;
-  }
 }
 
 .m-route-picker__selected-routes {
@@ -71,31 +53,20 @@
   overflow-y: scroll;
 }
 
-.m-route-picker__selected-routes-button,
-.m-route-picker__route-list-button {
-  border: none;
-  border-radius: 4px;
-  color: $dark;
-  font-family: $font-family;
-  font-size: 0.8125rem;
-  font-weight: bold;
-  padding: 0.3125rem;
-}
-
 .m-route-picker__selected-routes-button {
-  background-color: $sunflower;
+  @include button-primary;
   margin-bottom: 0.25rem;
   margin-right: 0.25rem;
   min-width: 2rem;
 }
 
 .m-route-picker__route-list-button {
-  background-color: transparentize($color: $white, $amount: 0.5);
+  @include button-light;
   margin-bottom: 0.25rem;
   width: 100%;
   word-break: break-word;
 
   &--selected {
-    background-color: $sunflower;
+    @include button-primary;
   }
 }
