--- a/assets/css/_vehicle_icon.scss
+++ b/assets/css/_vehicle_icon.scss
@@ -1,8 +1,17 @@
 .m-vehicle-icon__triangle {
-  @include svg-status-colors;
   fill: $color-vehicle-normal;
   stroke: $color-bg-base;
   stroke-width: 2;
+
+  .on-time & {
+    fill: $color-vehicle-ontime;
+  }
+  .early & {
+    fill: $color-vehicle-early;
+  }
+  .late & {
+    fill: $color-vehicle-late;
+  }
 }
 
 .m-vehicle-icon__label-background {
