Color the vehicles & lines based on schedule status (#74)

--- a/assets/css/_ladder.scss
+++ b/assets/css/_ladder.scss
@@ -54,4 +54,11 @@
 .m-ladder__scheduled-line {
   stroke: $color-vehicle-normal-line;
   stroke-width: 2;
+
+  &.early {
+    stroke: $color-vehicle-early;
+  }
+  &.late {
+    stroke: $color-vehicle-late;
+  }
 }
