--- a/assets/css/_vehicle_icon.scss
+++ b/assets/css/_vehicle_icon.scss
@@ -2,6 +2,16 @@
   fill: $color-vehicle-normal;
   stroke: $color-bg-base;
   stroke-width: 2;
+
+  .on-time & {
+    fill: $color-vehicle-ontime;
+  }
+  .early & {
+    fill: $color-vehicle-early;
+  }
+  .late & {
+    fill: $color-vehicle-late;
+  }
 }
 
 .m-vehicle-icon__label-background {
