Implement logins using Cognito and Active Directory
Install git in Docker file so we can install dependencies from GitHub.

# Conflicts:
#	config/config.exs
#	config/prod.exs

--- a/lib/skate_web/templates/layout/app.html.eex
+++ b/lib/skate_web/templates/layout/app.html.eex
@@ -25,6 +25,7 @@
     <main role="main" class="container">
       <%= render @view_module, @view_template, assigns %>
     </main>
+    <script id="app-user-token" type="text/plain"><%= assigns[:user_token] %></script>
     <script type="text/javascript" src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
   </body>
 </html>
