--- a/assets/css/_incoming_box.scss
+++ b/assets/css/_incoming_box.scss
@@ -2,6 +2,9 @@
   background-color: $color-bg-light;
   display: flex;
   flex-direction: column;
+  grid-column: span 1;
+  grid-row: 3 / 4;
+  margin: 0 0.5rem;
   min-height: 2.5rem;
 }
 
