--- a/assets/css/_route_ladders.scss
+++ b/assets/css/_route_ladders.scss
@@ -1,5 +1,9 @@
 .m-route-ladders {
-  display: flex;
+  box-sizing: border-box;
+  display: grid;
+  grid-template-columns: auto;
+  grid-template-rows: minmax(auto, max-content) auto minmax(auto, max-content);
+  height: 100vh;
   padding: 1rem 1rem 1rem 3rem;
   transition: padding-left 0.2s ease-in-out;
 
