--- a/assets/css/_route_ladder.scss
+++ b/assets/css/_route_ladder.scss
@@ -1,5 +1,5 @@
-.m-route-ladder__header-and-controls {
-  grid-row: 1 / 2;
+.m-route-ladder__header,
+.m-route-ladder__controls {
   margin: 0 0.5rem;
 }
 
@@ -8,6 +8,7 @@
   background-color: $color-primary;
   border-radius: 4px;
   color: $color-font-light;
+  grid-row: 1 / 2;
   padding: 0.4rem 0;
   position: relative;
   text-align: center;
@@ -21,6 +22,7 @@
 
 .m-route-ladder__controls {
   display: flex;
+  grid-row: 2 / 3;
 }
 
 .m-route-ladder__reverse {
