--- a/assets/css/_incoming_box.scss
+++ b/assets/css/_incoming_box.scss
@@ -2,7 +2,7 @@
   background-color: $color-bg-light;
   display: flex;
   flex-direction: column;
-  grid-row: 4 / 5;
+  grid-row-start: m-incoming-box;
   margin: 0 0.5rem;
   min-height: 2.5rem;
 }
