--- a/assets/css/_route_ladders.scss
+++ b/assets/css/_route_ladders.scss
@@ -2,10 +2,11 @@
   box-sizing: border-box;
   display: grid;
   grid-template-columns: auto;
-  grid-template-rows: minmax(auto, max-content) minmax(auto, max-content) auto minmax(
-      auto,
-      max-content
-    );
+  grid-template-rows:
+    [m-route-ladder__header] minmax(auto, max-content)
+    [m-route-ladder__controls] minmax(auto, max-content)
+    [m-ladder] auto
+    [m-incoming-box] minmax(auto, max-content);
   height: 100vh;
   padding: 1rem 1rem 1rem 3rem;
   transition: padding-left 0.2s ease-in-out;
