--- a/assets/css/_route_ladder.scss
+++ b/assets/css/_route_ladder.scss
@@ -1,6 +1,5 @@
-.m-route-ladder {
-  display: flex;
-  flex-direction: column;
+.m-route-ladder__header,
+.m-route-ladder__controls {
   margin: 0 0.5rem;
 }
 
@@ -9,6 +8,7 @@
   background-color: $color-primary;
   border-radius: 4px;
   color: $color-font-light;
+  grid-row-start: m-route-ladder__header;
   padding: 0.4rem 0;
   position: relative;
   text-align: center;
@@ -22,6 +22,7 @@
 
 .m-route-ladder__controls {
   display: flex;
+  grid-row-start: m-route-ladder__controls;
 }
 
 .m-route-ladder__reverse {
