--- a/assets/css/_ladder.scss
+++ b/assets/css/_ladder.scss
@@ -1,6 +1,10 @@
 .m-ladder {
   grid-row-start: m-ladder;
-  margin: auto;
+  margin: 0 auto;
+}
+
+.m-ladder__svg {
+  display: block;
 }
 
 .m-ladder__line {
