--- a/assets/css/_vehicle_properties_panel.scss
+++ b/assets/css/_vehicle_properties_panel.scss
@@ -100,6 +100,18 @@
   @include font-link;
 }
 
+.m-vehicle-properties-panel__data-discrepancies {
+  padding: 1rem;
+}
+
+.m-vehicle-properties-panel__data-discrepancy-source-id {
+  font-style: italic;
+
+  &::after {
+    content: ": ";
+  }
+}
+
 .m-vehicle-properties-panel__close {
   @include button-simple;
   display: block;
