Color off-course vehicles
Make a vehicle status function. Use that instead of referencing scheduleAdherenceStatus directly.

Add a check for whether a vehicle is unassigned by Swiftly.

--- a/assets/css/_ui_kit.scss
+++ b/assets/css/_ui_kit.scss
@@ -31,7 +31,7 @@ $color-vehicle-early: #e45d32;
 $color-vehicle-ghost: $color-bg-base;
 $color-vehicle-ghost-border: $color-component-dark;
 $color-vehicle-nonrevenue: #8f7ed6;
-$color-vehicle-invalid: $color-component-dark;
+$color-vehicle-off-course: $color-component-dark;
 $color-vehicle-selected-border: $color-component-dark;
 
 $color-line-normal: $color-component-light;
