--- a/assets/css/_vehicle_properties_panel.scss
+++ b/assets/css/_vehicle_properties_panel.scss
@@ -54,6 +54,9 @@
   .late & {
     fill: $color-vehicle-late;
   }
+  .off-course & {
+    fill: $color-vehicle-off-course;
+  }
 }
 
 .m-vehicle-properties-panel__schedule-adherence-status-string {
