Use a semantic color name for warning text

--- a/assets/css/_vehicle_properties_panel.scss
+++ b/assets/css/_vehicle_properties_panel.scss
@@ -104,7 +104,7 @@
 }
 
 .m-vehicle-properties-panel__not-available {
-  color: $color-vehicle-early;
+  color: $color-font-warning;
 }
 
 .m-vehicle-properties-panel__data-discrepancies {
