--- a/assets/css/_vehicle_properties_panel.scss
+++ b/assets/css/_vehicle_properties_panel.scss
@@ -3,7 +3,7 @@
   box-shadow: $modal-box-shadow;
   height: 100%;
   max-width: 100%;
-  overflow: scroll;
+  overflow-y: scroll;
   position: fixed;
   right: 0;
   top: inherit;
@@ -138,13 +138,12 @@
 }
 
 .m-vehicle-properties-panel__map {
-  height: 500px;
+  height: 30rem;
   margin-top: 1rem;
 }
 
 .m-vehicle-properties-panel__map-label {
-  @include font-small;
-  font-weight: bold;
+  @include font-emph;
 
   svg {
     overflow: visible;
@@ -154,5 +153,9 @@
 .m-vehicle-properties-panel__map-icon {
   path {
     fill: $color-primary;
+  }
+
+  svg {
+    overflow: visible;
   }
 }
