move map classes to separate scss file

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -11,6 +11,7 @@
 @import "route_filter";
 @import "vehicle_icon";
 @import "vehicle_properties_panel";
+@import "vehicle_map";
 
 body {
   background-color: $color-bg-base;
