Add map to vehicle properties panel (#93)
* install leaflet

--- a/assets/css/_vehicle_properties_panel.scss
+++ b/assets/css/_vehicle_properties_panel.scss
@@ -3,6 +3,7 @@
   box-shadow: $modal-box-shadow;
   height: 100%;
   max-width: 100%;
+  overflow-y: scroll;
   position: fixed;
   right: 0;
   top: inherit;
