--- a/lib/skate_web/templates/layout/_fullstory.html.eex
+++ b/lib/skate_web/templates/layout/_fullstory.html.eex
@@ -15,4 +15,8 @@ window['_fs_namespace'] = 'FS';
     g.identifyAccount=function(i,v){o='account';v=v||{};v.acctId=i;g(o,v)};
     g.clearUserCookie=function(){};
 })(window,document,window['_fs_namespace'],'script','user');
+
+<%= if @user_info do %>
+  window.userInfo = <%= @user_info |> Jason.encode!() |> Phoenix.HTML.raw() %>
+<% end %>
 </script>
