--- a/assets/css/_ladder.scss
+++ b/assets/css/_ladder.scss
@@ -10,13 +10,30 @@
 .m-ladder__line {
   fill: none;
   stroke: $color-line-normal;
+  stroke-linecap: round;
   stroke-width: 7;
+}
+
+.m-ladder__headway-line {
+  &--bunched {
+    stroke: $color-line-bunched-light;
+  }
+
+  &--very-bunched {
+    stroke: $color-line-bunched;
+  }
+
+  &--gapped {
+    stroke: $color-line-gapped-light;
+  }
+
+  &--very-gapped {
+    stroke: $color-line-gapped;
+  }
 }
 
 .m-ladder__stop-circle {
   fill: $white;
-  stroke: $color-line-normal;
-  stroke-width: 1;
 }
 
 .m-ladder__timepoint-name {
